# Pulse

./: .gitignore  CHANGELOG.md  DEMO.md  README.md  pyproject.toml  start.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: blockers.py  demo.py  live.py  slack.py  standup.py  tasks.py  workspaces.py
backend/app/security/: auth.py  prompts.py
backend/app/services/: calendar.py  extract.py  firestore.py  gemini.py  slack.py
backend/tests/: test_auth_required.py  test_health.py  test_prompts_security.py  test_slack_signature.py
frontend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  eslint.config.mjs  next.config.ts  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/workspace/: page.tsx
frontend/components/blockers/: BlockerGraph.tsx
frontend/components/kanban/: KanbanBoard.tsx
frontend/components/layout/: WorkspaceShell.tsx
frontend/components/standup/: MicOrb.tsx  StandupOverlay.tsx
frontend/components/ticker/: Ticker.tsx
frontend/e2e/: landing.spec.ts
frontend/lib/: api.ts  firebase.ts  live-audio.ts
frontend/public/: manifest.webmanifest
frontend/tests/: cn.test.ts  ticker.test.tsx
frontend/types/: speech.d.ts
infra/: cloudbuild.yaml  firebase.json  firestore.indexes.json  firestore.rules
scripts/: deploy.sh
