[project]
name = "pulse-api"
version = "0.1.0"
description = "Pulse — AI team collaboration backend (FastAPI + Gemini 3)"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "google-genai>=0.3.0",
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-tasks>=2.16.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-logging>=3.11.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.12",
    "websockets>=13.1",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pip-audit>=2.7.3",
    "freezegun>=1.5.1",
    "respx>=0.21.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S"]
ignore = ["S101"]  # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing --cov-report=xml"
markers = [
    "smoke: smoke tests for golden path",
    "integration: integration tests (require emulators)",
]

[tool.coverage.run]
omit = ["tests/*", "app/main.py"]

[tool.coverage.report]
fail_under = 75
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
